--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
@@ -25,4 +31,17 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+//  SDK在解析请求返回的JSON数据时用到
+    implementation 'com.google.code.gson:gson:2.8.1'
+// SDK联网框架使用okhttp
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+// SDK联网框架使用okhttp
+    implementation 'com.squareup.okio:okio:1.15.0'
+// v4包
+    implementation 'com.android.support:support-v4:28.0.0'
+
+    implementation files('libs\\TingPhoneOpenSDK_7.0.19.jar')
+    implementation files('libs\\XmlyOAuth2SDK_V1.11.jar')
+
 }
