--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,11 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.15.0'
 // v4包
     implementation 'com.android.support:support-v4:28.0.0'
+//    MagicIndicator导航
+    implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
 
     implementation files('libs\\TingPhoneOpenSDK_7.0.19.jar')
     implementation files('libs\\XmlyOAuth2SDK_V1.11.jar')
+
 
 }
