完善代码MVP的推荐页面,不冗余

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
 //    MagicIndicator导航
     implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
+//    Recyclerview
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+//    picasso加载图片框架
+    implementation 'com.squareup.picasso:picasso:2.3.2'
 
     implementation files('libs\\TingPhoneOpenSDK_7.0.19.jar')
     implementation files('libs\\XmlyOAuth2SDK_V1.11.jar')
