完成播放搜索的功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 //    picasso加载图片框架
     implementation 'com.squareup.picasso:picasso:2.3.2'
+//    上拉下拉刷新加载
+    implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
 
     implementation files('libs\\TingPhoneOpenSDK_7.0.19.jar')
     implementation files('libs\\XmlyOAuth2SDK_V1.11.jar')
