--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ dependencies {
 // v4包
     implementation 'com.android.support:support-v4:28.0.0'
 //    MagicIndicator导航
-    implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
+    implementation 'com.github.hackware1993:MagicIndicator:1.6.0' // for support lib
+    implementation 'com.github.hackware1993:MagicIndicator:1.7.0' // for androidx
 //    Recyclerview
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 //    picasso加载图片框架
