--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,15 @@
 
 buildscript {
     repositories {
-        google()
         jcenter()
+        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven {
             url "https://jitpack.io"
         }
-        
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,12 +19,12 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
+        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven {
             url "https://jitpack.io"
         }
-        
+        google()
     }
 }
 
